Working on new project page structure.

--- a/_projects/1.md
+++ b/_projects/1.md
@@ -1,4 +1,6 @@
 ---
+layout: project
+id: 1
 title: Scratch 3.0 Fork
 subtitle: Scratch is a high-level block-based visual programming language and website aimed primarily at children as an educational tool for programming.
 image: assets/img/portfolio/01-full.jpg
