--- a/_projects/2.md
+++ b/_projects/2.md
@@ -1,4 +1,6 @@
 ---
+layout: project
+id: 2
 title: brag.charity
 subtitle: A curated collection of digital assets for good.
 image: assets/img/portfolio/02-full.jpg
