--- a/_projects/3.md
+++ b/_projects/3.md
@@ -1,4 +1,6 @@
 ---
+layout: project
+id: 3
 title: Minecraft Server
 subtitle: A Minecraft Server for our community.
 image: assets/img/portfolio/03-full.jpg
