--- a/_projects/4.md
+++ b/_projects/4.md
@@ -1,4 +1,6 @@
 ---
+layout: project
+id: 4
 title: Social Media
 subtitle: STEM educational topics for the community.
 image: assets/img/portfolio/04-full.jpg
