--- a/_projects/1.md
+++ b/_projects/1.md
@@ -2,17 +2,25 @@
 layout: project
 id: 1
 title: Scratch 3.0 Fork
-subtitle: Scratch is a high-level block-based visual programming language and website aimed primarily at children as an educational tool for programming.
-image: assets/img/portfolio/01-full.jpg
+subtitle: A block-based programming application used as an educational tool.
+image: /assets/img/portfolio/01-full.jpg
 alt: 
 
 caption:
   title: Programming
   subtitle: Entrepreneurship
-  thumbnail: assets/img/portfolio/01-thumbnail.jpg
+  thumbnail: /assets/img/portfolio/01-thumbnail.jpg
 ---
 
+
+
+<div class="row">
+  <div class="col-md-12 col-sm-12">
+
 The Digital Education & Safety Foundation developed a fork of the Scratch 3.0 coding platform which included software extensions for generating NFTs for their fundraising program. The Foundation is working to get the changes merged into the main codebase. The fork is hosted by the foundation and is available free for use here: <a href="https://scratch.digitaleducationsafety.org">https://scratch.digitaleducationsafety.org</a>.
+  </div>
+</div>
+
 
 
 <h3>Game Development</h3>
@@ -39,9 +47,3 @@ The Digital Education & Safety Foundation developed a fork of the Scratch 3.0 co
   <iframe class="embed-responsive-item" src="https://scratch.mit.edu/projects/874326487/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
   </div>
 </div>
-
-{:.list-inline}
-- Date: December 2022
-- Client: Community
-- Category: Entrepreneurship
-
