--- a/_projects/1.md
+++ b/_projects/1.md
@@ -1,8 +1,8 @@
 ---
 layout: project
 id: 1
-title: Scratch 3.0 Fork
-subtitle: A block-based programming application used as an educational tool.
+title: Projects
+subtitle: Scratch 3.0 Fork
 image: /assets/img/portfolio/01-full.jpg
 alt: 
 
