--- a/_projects/4.md
+++ b/_projects/4.md
@@ -1,8 +1,8 @@
 ---
 layout: project
 id: 4
-title: Social Media
-subtitle: STEM educational topics for the community.
+title: Projects
+subtitle: Social Media
 image: /assets/img/portfolio/04-full.jpg
 alt: 
 
