--- a/_projects/2.md
+++ b/_projects/2.md
@@ -1,8 +1,8 @@
 ---
 layout: project
 id: 2
-title: brag.charity
-subtitle: A curated collection of digital assets for good.
+title: Projects
+subtitle: brag.charity - Digital Assets Marketplace
 image: /assets/img/portfolio/02-full.jpg
 alt: 
 
