--- a/_projects/3.md
+++ b/_projects/3.md
@@ -1,8 +1,8 @@
 ---
 layout: project
 id: 3
-title: Minecraft Server
-subtitle: A Minecraft Server for our community.
+title: Projects
+subtitle: A Minecraft Server for the community
 image: /assets/img/portfolio/03-full.jpg
 alt: 
 
