--- a/_programs/1.md
+++ b/_programs/1.md
@@ -7,7 +7,7 @@ image: /assets/img/portfolio/01-full.jpg
 alt: 
 
 caption:
-  title: Programming
+  title: Coding
   subtitle: Entrepreneurship
   thumbnail: /assets/img/portfolio/01-thumbnail.jpg
 ---
