--- a/_programs/3.md
+++ b/_programs/3.md
@@ -2,7 +2,7 @@
 layout: project
 id: 3
 title: Projects
-subtitle: A Minecraft Server for the community
+subtitle: Minecraft for the community
 image: /assets/img/portfolio/03-full.jpg
 alt: 
 
