--- a/_resources/2.md
+++ b/_resources/2.md
@@ -2,11 +2,11 @@
 layout: project
 id: 2
 title: Resources
-subtitle: Videos
+subtitle: Video
 image: /assets/img/resources/priscilla-du-preez-XkKCui44iM0-unsplash.jpg
 
 caption:
-  title: Videos
+  title: Video
   thumbnail: /assets/img/resources/priscilla-du-preez-XkKCui44iM0-unsplash.jpg
 ---
 
