--- a/_resources/1.md
+++ b/_resources/1.md
@@ -1,8 +1,6 @@
 ---
 id: 1
 title: Bluey
-
-
 subtitle: Games
 image: /assets/img/resources/kelly-sikkema-RZamNjYMjU0-unsplash.jpg
 alt: 
@@ -11,14 +9,6 @@ caption:
   title: Bluey
   thumbnail: /assets/img/resources/kelly-sikkema-RZamNjYMjU0-unsplash.jpg
 
-tags: games
+tags: 
+categories: games
 ---
-
-
-asdf
-ads
-fsad
-f
-d
-f
-safd
