Working on content.

--- a/_resources/1.md
+++ b/_resources/1.md
@@ -1,14 +1,15 @@
 ---
 id: 1
-title: Bluey
-subtitle: Games
-image: /assets/img/resources/kelly-sikkema-RZamNjYMjU0-unsplash.jpg
+title: Bluey - Keepy Uppy
+subtitle: Help Bluey and Bingo keep the balloons from touching the ground in a game of Keepy Uppy!
+image: /assets/img/resources/bluey_keepyuppy_800x544.jpeg
+link: https://www.bluey.tv/play/game-keepy-uppy/
 alt: 
 
 caption:
   title: Bluey
-  thumbnail: /assets/img/resources/kelly-sikkema-RZamNjYMjU0-unsplash.jpg
+  thumbnail: /assets/img/resources/bluey_keepyuppy_800x544.jpeg
 
-tags: 
+tags: [kids, web]
 categories: games
 ---
