--- a/_resources/2.md
+++ b/_resources/2.md
@@ -1,16 +1,16 @@
 ---
 id: 2
-title: Video Test
+title: Minecraft - Education Edition
+link: https://education.minecraft.net/en-us
 
 
-subtitle: Video Test
-image: /assets/img/portfolio/02-thumbnail.jpg
+subtitle: Get Minecraft for Your Classroom
+image: /assets/img/resources/mee-new-logo.png
 alt: 
 
 caption:
-  title: Video Test
-  thumbnail: /assets/img/portfolio/02-thumbnail.jpg
+  thumbnail: /assets/img/resources/mee-new-logo.png
 
-tags:
-categories: videos
+tags: [kids, teens, adults, sandbox]
+categories: games
 ---
