--- a/_resources/3.md
+++ b/_resources/3.md
@@ -1,14 +1,14 @@
 ---
 id: 3
-title: Bluey
-subtitle: Games
-image: /assets/img/portfolio/03-thumbnail.jpg
+title: Roblox - Education
+subtitle: A New Era of Teaching and Learning
+image: /assets/img/resources/roblox-edu-homepage.jpeg
+link: https://education.roblox.com/
 alt: 
 
 caption:
-  title: Bluey
-  thumbnail: /assets/img/portfolio/03-thumbnail.jpg
+  thumbnail: /assets/img/resources/roblox-edu-homepage.jpeg
 
-tags: 
+tags: [kids, teens, adults, sandbox]
 categories: games
 ---
