--- a/_resources/2.md
+++ b/_resources/2.md
@@ -11,6 +11,6 @@ alt:
 caption:
   thumbnail: /assets/img/resources/mee-new-logo.png
 
-tags: [kids, teens, adults, sandbox]
+tags: [all, sandbox]
 categories: games
 ---
