--- a/_resources/3.md
+++ b/_resources/3.md
@@ -9,6 +9,6 @@ alt:
 caption:
   thumbnail: /assets/img/resources/roblox-edu-homepage.jpeg
 
-tags: [kids, teens, adults, sandbox]
+tags: [all, sandbox]
 categories: games
 ---
