--- a/_resources/1.md
+++ b/_resources/1.md
@@ -10,6 +10,6 @@ caption:
   title: Bluey
   thumbnail: /assets/img/resources/bluey_keepyuppy_800x544.jpeg
 
-tags: [all, web]
+tags: [all, web, bluey]
 categories: games
 ---
