--- a/_resources/4.md
+++ b/_resources/4.md
@@ -1,17 +1,15 @@
 ---
-id: 4
-title: Video Test
-link: https://google.com
-
-
-subtitle: Video Test
-image: /assets/img/portfolio/04-thumbnail.jpg
+id: 1
+title: Bluey - Magic Xylophone
+subtitle: Make some noise and have dress up fun in a game of Magic Xylophone!
+image: /assets/img/resources/bluey_magicxylophone_800x544.jpeg
+link: https://www.bluey.tv/play/game-keepy-uppy/
 alt: 
 
 caption:
-  title: Video Test
-  thumbnail: /assets/img/portfolio/04-thumbnail.jpg
+  title: Bluey
+  thumbnail: /assets/img/resources/bluey_magicxylophone_800x544.jpeg
 
-tags:
-categories: videos
+tags: [all, web, bluey]
+categories: games
 ---
