--- a/_programs/1.md
+++ b/_programs/1.md
@@ -1,37 +1,38 @@
 ---
 layout: project
 id: 1
-title: Projects
-subtitle: Scratch 3.0 Fork
+title: Programming
+subtitle: Projects
 image: /assets/img/portfolio/01-full.jpg
 alt: 
 
 caption:
-  title: Coding
+  title: Programming
   subtitle: Entrepreneurship
   thumbnail: /assets/img/portfolio/01-thumbnail.jpg
 ---
 
+
+## Programming: Code your digital STEM vision
+
+Utilizing programming in the realm of fundraising and game development for a non-profit organization can be a powerful and innovative approach. By harnessing the capabilities of software development, non-profits can create engaging and interactive games or applications that not only entertain but also educate and inspire supporters. These games can serve as fundraising tools, encouraging donations through in-game purchases or crowdfunding elements.
+
+Additionally, they can help raise awareness about the organization’s mission and initiatives. Programming also enables non-profits to efficiently manage donor databases, automate donation tracking, and personalize donor engagement strategies. Furthermore, by leveraging technology, non-profits can reach a broader audience, extending their impact and ensuring a sustainable flow of funds for their noble causes. In this digital age, the fusion of programming and non-profit work opens up exciting possibilities for creativity and resource mobilization.
+
+The Digital Education & Safety Foundation developed a fork of the Scratch 3.0 Visual Programming platform which includes software extensions for generating NFTs for their fundraising program. The Foundation is working to get the changes merged into the main codebase. The fork is hosted by the foundation and is available free for use <a href="https://scratch.digitaleducationsafety.org">here</a>.
+
+See some examples below!
+
 <div class="row">
-  <div class="col-md-12 col-sm-12">
+  <div class="col-md-6 col-sm-6">
 
-The Digital Education & Safety Foundation developed a fork of the Scratch 3.0 coding platform which included software extensions for generating NFTs for their fundraising program. The Foundation is working to get the changes merged into the main codebase. The fork is hosted by the foundation and is available free for use here: <a href="https://scratch.digitaleducationsafety.org">https://scratch.digitaleducationsafety.org</a>.
-  </div>
-</div>
-
-
-
-<h3>Game Development</h3>
-
-<div class="row">
-  <div class="embed-responsive embed-responsive-16by9 col-md-12 col-sm-12">
   <iframe src="https://scratch.mit.edu/projects/876449865/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
   </div>
+  
+  <div class="col-md-6 col-sm-6">
+
+  <iframe class="embed-responsive-item" src="https://scratch.mit.edu/projects/874326487/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+  </div>  
 </div>
 
-<h3>Music Production</h3>
-<div class="row">
-  <div class="embed-responsive embed-responsive-16by9 col-md-12 col-sm-12">
-  <iframe class="embed-responsive-item" src="https://scratch.mit.edu/projects/874326487/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
-  </div>
-</div>
+
