--- a/_programs/2.md
+++ b/_programs/2.md
@@ -1,10 +1,9 @@
 ---
 layout: project
 id: 2
-title: Projects
-subtitle: brag.charity - Digital Assets Marketplace
+title: brag.charity
+subtitle: Projects
 image: /assets/img/portfolio/02-full.jpg
-alt: 
 
 caption:
   title: Web 3
@@ -12,16 +11,18 @@ caption:
   thumbnail: /assets/img/portfolio/02-thumbnail.jpg
 ---
 
-brag.charity is a fundraising program for the Digital Education & Safety foundation. Check out our first collection on <a href="https://opensea.io/digitaledsafety">Opensea</a>.
+## Web 3: Fundraising in the digital age
+
+Embracing Web 3, cryptocurrency, and NFTs (Non-Fungible Tokens) for non-profit fundraising represents an innovative and potentially transformative strategy. Cryptocurrencies like Bitcoin, Ethereum, and others allow for borderless, secure, and transparent transactions, making it easier for supporters worldwide to contribute to a non-profit's cause.
+
+NFTs enable non-profits to create unique and collectible digital assets, such as artwork or virtual experiences, which can be sold or auctioned off to raise funds. These digital assets not only engage supporters but also grant them a tangible connection to the organization's mission. By adopting crypto and NFTs, non-profits can tap into a tech-savvy donor base, provide transparency in fund allocation through blockchain technology, and explore new avenues for sustainable fundraising while simultaneously raising awareness about their crucial work in the digital realm.
+
+brag.charity is a Digital Assets Marketplace and a fundraising program for the Digital Education & Safety foundation. Check out our first collection on <a href="https://opensea.io/digitaledsafety">Opensea</a>.
 
 
 <nft-card
 contractAddress="0x495f947276749ce646f68ac8c248420045cb7b5e"
 tokenId="77085256408163406308004197185999916350236004123346139875108147950390832267265">
 </nft-card>
-<script src="https://unpkg.com/embeddable-nfts/dist/nft-card.min.js"></script><br /><br />
-
-
-
-
+<script src="https://unpkg.com/embeddable-nfts/dist/nft-card.min.js"></script>
 
