--- a/_programs/3.md
+++ b/_programs/3.md
@@ -12,4 +12,13 @@ caption:
   thumbnail: /assets/img/portfolio/03-thumbnail.jpg
 ---
 
+## Community Gaming: Minecraft for education
+
+Engaging with a non-profit Minecraft server to explore STEM (Science, Technology, Engineering, and Mathematics) topics is a captivating and educational experience. This innovative approach to learning combines the creative and collaborative nature of Minecraft with the principles of STEM education. Within this virtual world, participants can build complex structures, experiment with redstone circuitry, and even simulate scientific phenomena, all while learning valuable concepts in a fun and immersive way.
+
+These servers often offer curated educational content and challenges that encourage critical thinking, problem-solving, and teamwork, fostering a sense of community among players who share a passion for STEM. Ultimately, playing on a non-profit Minecraft server dedicated to STEM topics not only makes learning enjoyable but also empowers individuals with the skills and knowledge needed for future careers in science and technology.
+
 The Foundation offers a Minecraft server to our community members! Please contact us for more information.
+
+![Minecraft](/assets/img/sc8d30.jpg)
+
