--- a/_programs/4.md
+++ b/_programs/4.md
@@ -1,8 +1,8 @@
 ---
 layout: project
 id: 4
-title: Projects
-subtitle: Social Media
+title: Social Media
+subtitle: Projects
 image: /assets/img/portfolio/04-full.jpg
 alt: 
 
@@ -12,7 +12,13 @@ caption:
   thumbnail: /assets/img/portfolio/04-thumbnail.jpg
 ---
 
-Follow our social media accounts for the latest in STEM-related tech, news, education and more!
+## Social Media
+
+Leveraging the power of social media to raise awareness for philanthropy in STEM education is a dynamic and influential strategy. Platforms like Facebook, Twitter, Instagram, and TikTok offer non-profit organizations an extensive reach to connect with a global audience passionate about science, technology, engineering, and mathematics. Through compelling content, live streams, webinars, and engaging challenges, these organizations can showcase their initiatives, share success stories, and highlight the impact of STEM education in underprivileged communities.
+
+Social media not only provides a cost-effective way to mobilize support and donations but also encourages collaboration, knowledge sharing, and the creation of a vibrant online community dedicated to advancing STEM education. By harnessing the vast social networks, non-profits can inspire a new generation of STEM enthusiasts, all while making philanthropy for education a visible and accessible cause for individuals around the world.
+
+Follow the Foundation's accounts for the latest in STEM-related tech, news, education and more!
 
 <div class="row">
   <div class="col-md-6 col-sm-6">
