--- a/_resources/4.md
+++ b/_resources/4.md
@@ -3,7 +3,7 @@ id: 4
 title: Bluey - Magic Xylophone
 subtitle: Make some noise and have dress up fun in a game of Magic Xylophone!
 image: /assets/img/resources/bluey_magicxylophone_800x544.jpeg
-link: https://www.bluey.tv/play/game-keepy-uppy/
+link: https://www.bluey.tv/play/game-xylophone/
 alt: 
 
 caption:
