--- a/_resources/6.md
+++ b/_resources/6.md
@@ -3,7 +3,7 @@ id: 6
 title: Scratch Jr.
 subtitle: With ScratchJr, young children can program their own interactive stories and games.
 image: /assets/img/resources/homegraphic.png
-link: https://spaceplace.nasa.gov/explore-mars/en/
+link: https://www.scratchjr.org/
 alt: 
 
 caption:
