--- a/_resources/9.md
+++ b/_resources/9.md
@@ -2,11 +2,11 @@
 id: 9
 title: makecode
 subtitle: Microsoft MakeCode is a free online learn-to-code platform where anyone can build games, code devices, and mod Minecraft!
-image: /assets/img/resources/
+image: /assets/img/resources/makecode-example.png
 link: https://www.microsoft.com/en-us/makecode
 
 caption:
-  thumbnail: /assets/img/resources/
+  thumbnail: /assets/img/resources/makecode-example.png
 
 tags: [all]
 categories: apps
