--- a/_resources/10.md
+++ b/_resources/10.md
@@ -1,7 +1,7 @@
 ---
 id: 10
 title: Scratch
-subtitle: Microsoft MakeCode is a free online learn-to-code platform where anyone can build games, code devices, and mod Minecraft!
+subtitle: Create stories, games, and animations. Share with others around the world!
 image: /assets/img/resources/scratch-og.png
 link: https://scratch.mit.edu/
 
