--- a/_programs/2.md
+++ b/_programs/2.md
@@ -17,6 +17,8 @@ Embracing Web 3, cryptocurrency, and NFTs (Non-Fungible Tokens) for non-profit f
 
 NFTs enable non-profits to create unique and collectible digital assets, such as artwork or virtual experiences, which can be sold or auctioned off to raise funds. These digital assets not only engage supporters but also grant them a tangible connection to the organization's mission. By adopting crypto and NFTs, non-profits can tap into a tech-savvy donor base, provide transparency in fund allocation through blockchain technology, and explore new avenues for sustainable fundraising while simultaneously raising awareness about their crucial work in the digital realm.
 
+By leveraging algorithms and programming using in NFT creation, students not only gain a deeper understanding of computational concepts but also develop the technical skills required for asset creation in the digital realm. This educational endeavor goes beyond the classroom, as it integrates marketing strategies, allowing students to showcase their creations and understand the value proposition of their NFTs. Ultimately, such a project encourages innovation and entrepreneurial thinking while bridging the gap between traditional education and the dynamic world of blockchain technology, ensuring that STEM and STEAM education remains both relevant and engaging for future generations.
+
 brag.charity is a Digital Assets Marketplace and a fundraising program for the Digital Education & Safety foundation. Check out our first collection on <a href="https://opensea.io/digitaledsafety">Opensea</a>.
 
 
