--- a/_programs/2.md
+++ b/_programs/2.md
@@ -17,12 +17,4 @@ Embracing Web 3, cryptocurrency, and NFTs (Non-Fungible Tokens) for non-profit f
 
 NFTs enable non-profits to create unique and collectible digital assets, such as artwork or virtual experiences, which can be sold or auctioned off to raise funds. These digital assets not only engage supporters but also grant them a tangible connection to the organization's mission. By adopting crypto and NFTs, non-profits can tap into a tech-savvy donor base, provide transparency in fund allocation through blockchain technology, and explore new avenues for sustainable fundraising while simultaneously raising awareness about their crucial work in the digital realm.
 
-brag.charity is a Digital Assets Marketplace and a fundraising program for the Digital Education & Safety foundation. Check out our first collection on <a href="https://opensea.io/digitaledsafety">Opensea</a>.
-
-
-<nft-card
-contractAddress="0x495f947276749ce646f68ac8c248420045cb7b5e"
-tokenId="77085256408163406308004197185999916350236004123346139875108147950390832267265">
-</nft-card>
-<script src="https://unpkg.com/embeddable-nfts/dist/nft-card.min.js"></script>
-
+brag.charity is a Digital Assets Marketplace and a fundraising program for the Digital Education & Safety foundation. Check out our latest collection on <a href="https://opensea.io/digitaledsafety">Opensea</a>.
