--- a/_programs/1.md
+++ b/_programs/1.md
@@ -25,19 +25,19 @@ See some examples below!
 <div class="row">
   <div class="col-md-6 col-sm-6">
 
-  <iframe src="https://scratch.mit.edu/projects/876449865/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+  <iframe src="https://scratch.mit.edu/projects/876449865/embed" allowtransparency="true" width="100%" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
   </div>
   
   <div class="col-md-6 col-sm-6">
 
-  <iframe class="embed-responsive-item" src="https://scratch.mit.edu/projects/874326487/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+  <iframe class="embed-responsive-item" src="https://scratch.mit.edu/projects/874326487/embed" allowtransparency="true" width="100%"  height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
   </div>  
 </div>
 
 <div class="row">
   <div class="col-md-6 col-sm-6">
 
-  <iframe src="https://scratch.mit.edu/projects/894546913/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+  <iframe src="https://scratch.mit.edu/projects/894546913/embed" allowtransparency="true" width="100%"  height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
   </div>
   
 </div>
