--- a/_programs/1.md
+++ b/_programs/1.md
@@ -19,7 +19,7 @@ Utilizing programming in the realm of fundraising and game development for a non
 
 Additionally, they can help raise awareness about the organization’s mission and initiatives. Programming also enables non-profits to efficiently manage donor databases, automate donation tracking, and personalize donor engagement strategies. Furthermore, by leveraging technology, non-profits can reach a broader audience, extending their impact and ensuring a sustainable flow of funds for their noble causes. In this digital age, the fusion of programming and non-profit work opens up exciting possibilities for creativity and resource mobilization.
 
-The Digital Education & Safety Foundation developed a fork of the Scratch 3.0 Visual Programming platform which includes software extensions for generating NFTs for their fundraising program. The Foundation is working to get the changes merged into the main codebase. The fork is hosted by the foundation and is available free for use <a href="https://scratch.digitaleducationsafety.org">here</a>.
+The Digital Education & Safety Foundation developed a fork of the Scratch 3.0 Visual Programming platform which includes software extensions for generating NFTs for their fundraising program. The fork is hosted by the foundation and is available free for use <a href="https://scratch.digitaleducationsafety.org">here</a>.
 
 See some examples below!
 <div class="row">
