--- a/_programs/3.md
+++ b/_programs/3.md
@@ -1,8 +1,8 @@
 ---
 layout: project
 id: 3
-title: Projects
-subtitle: Minecraft for the community
+title: Community Servers
+subtitle: Projects
 image: /assets/img/portfolio/03-full.jpg
 alt: 
 
