--- a/_programs/3.md
+++ b/_programs/3.md
@@ -12,13 +12,33 @@ caption:
   thumbnail: /assets/img/portfolio/03-thumbnail.jpg
 ---
 
-## Community Gaming: Minecraft for education
+## Community Gaming: Minecraft
 
 Engaging with a non-profit Minecraft server to explore STEM (Science, Technology, Engineering, and Mathematics) topics is a captivating and educational experience. This innovative approach to learning combines the creative and collaborative nature of Minecraft with the principles of STEM education. Within this virtual world, participants can build complex structures, experiment with redstone circuitry, and even simulate scientific phenomena, all while learning valuable concepts in a fun and immersive way.
 
 These servers often offer curated educational content and challenges that encourage critical thinking, problem-solving, and teamwork, fostering a sense of community among players who share a passion for STEM. Ultimately, playing on a non-profit Minecraft server dedicated to STEM topics not only makes learning enjoyable but also empowers individuals with the skills and knowledge needed for future careers in science and technology.
 
-The Foundation offers a Minecraft server to our community members! Please contact us for more information.
+The Foundation offers a no-cost moderated Minecraft server to our community members! Please contact us for more information.
 
-![Minecraft](/assets/img/sc8d30.jpg)
+
+<div id="twitch-embed"></div>
+<script src="https://embed.twitch.tv/embed/v1.js"></script>
+
+<!-- Create a Twitch.Embed object that will render within the "twitch-embed" element. -->
+<script type="text/javascript">
+  var embed = new Twitch.Embed("twitch-embed", {
+    width: "100%",
+    height: 480,
+    channel: "digitaledsafety",
+    layout: "video",
+    autoplay: false,
+    // Only needed if this page is going to be embedded on other websites
+    parent: ["psychic-space-sniffle-pw6vr96jqqj246v-4000.app.github.dev", "digitaleducationsafety.org"]
+  });
+
+  embed.addEventListener(Twitch.Embed.VIDEO_READY, () => {
+    var player = embed.getPlayer();
+    player.play();
+  });
+</script>
 
