--- a/_programs/2.md
+++ b/_programs/2.md
@@ -13,14 +13,38 @@ caption:
 
 ## Web 3: Fundraising in the digital age
 
+<div class="row">
+<div class="col-md-8 mb-3">
+<p>
 Embracing Web 3, cryptocurrency, and NFTs (Non-Fungible Tokens) for non-profit fundraising represents an innovative and potentially transformative strategy. Cryptocurrencies like Bitcoin, Ethereum, and others allow for borderless, secure, and transparent transactions, making it easier for supporters worldwide to contribute to a non-profit's cause.
-
+</p>
+<p>
 NFTs enable non-profits to create unique and collectible digital assets, such as artwork or virtual experiences, which can be sold or auctioned off to raise funds. These digital assets not only engage supporters but also grant them a tangible connection to the organization's mission. By adopting crypto and NFTs, non-profits can tap into a tech-savvy donor base, provide transparency in fund allocation through blockchain technology, and explore new avenues for sustainable fundraising while simultaneously raising awareness about their crucial work in the digital realm.
-
+</p>
+<p>
 By leveraging algorithms and programming used in NFT creation, learners not only gain a deeper understanding of computational concepts but also develop the technical skills required for asset creation in the digital realm. This educational endeavor goes beyond the classroom, as it integrates marketing strategies, allowing students to showcase their creations and understand the value proposition of their NFTs. Ultimately, such a project encourages innovation and entrepreneurial thinking while bridging the gap between traditional education and the dynamic world of blockchain technology, ensuring that STEM and STEAM education remains both relevant and engaging for future generations.
+</p>
+<p>
+<a href="https://brag.charity">brag.charity</a> is a Digital Assets Marketplace and a fundraising program for the Digital Education & Safety Foundation. You can experience <a href="https://brag.charity">brag.charity</a> below.
 
-brag.charity is a Digital Assets Marketplace and a fundraising program for the Digital Education & Safety Foundation.
+</p>
+</div>
 
-<iframe src="https://brag.charity" style="width:100%;height:700px;">
+
+<div class="col-md-4 mb-3">
+  <div class="card">
+    <img class="img-fluid" src="/assets/img/glossaries/mast.jpg" alt="">
+      <div class="card-body">
+          <h5 class="card-title">Web 3 Glossary</h5>
+          <p class="card-text">See trending Web 3 definitions using our Glossaries tool.</p>
+          <a href="/glossaries" target="_blank" class="btn btn-primary stretched-link">View</a>
+      </div>
+  </div>
+</div>
+</div>
+
+
+
+<iframe src="https://brag.charity" style="border: none;width:100%;height:700px;">
     Your browser doesn't support iframes
 </iframe>
