--- a/_programs/2.md
+++ b/_programs/2.md
@@ -36,7 +36,7 @@ By leveraging algorithms and programming used in NFT creation, learners not only
     <img class="img-fluid" src="/assets/img/glossaries/mast.jpg" alt="">
       <div class="card-body">
           <h5 class="card-title">Web 3 Glossary</h5>
-          <p class="card-text">See trending Web 3 definitions using our Glossaries tool.</p>
+          <p class="card-text">See trending Web 3 definitions using our curated Glossaries.</p>
           <a href="/glossaries" target="_blank" class="btn btn-primary stretched-link">View</a>
       </div>
   </div>
