--- a/_programs/2.md
+++ b/_programs/2.md
@@ -45,6 +45,6 @@ By leveraging algorithms and programming used in NFT creation, learners not only
 
 
 
-<iframe src="https://brag.charity" style="border: none;width:100%;height:700px;">
+<iframe loading="lazy" src="https://brag.charity" style="border: none;width:100%;height:700px;">
     Your browser doesn't support iframes
 </iframe>
