Adding open source projects

--- a/_programs/1.md
+++ b/_programs/1.md
@@ -15,13 +15,44 @@ caption:
 
 ## Programming: Code your digital STEM vision
 
-Utilizing programming in the realm of fundraising and game development for a non-profit organization can be a powerful and innovative approach. By harnessing the capabilities of software development, non-profits can create engaging and interactive games or applications that not only entertain but also educate and inspire supporters. These games can serve as fundraising tools, encouraging donations through in-game purchases or crowdfunding elements.
 
-Additionally, they can help raise awareness about the organization’s mission and initiatives. Programming also enables non-profits to efficiently manage donor databases, automate donation tracking, and personalize donor engagement strategies. Furthermore, by leveraging technology, non-profits can reach a broader audience, extending their impact and ensuring a sustainable flow of funds for their noble causes. In this digital age, the fusion of programming and non-profit work opens up exciting possibilities for creativity and resource mobilization.
 
+
+
+
+<div class="row">
+<div class="col-md-8 mb-3">
+<p>
+Utilizing programming and open source can be a powerful and innovative approach. By harnessing the capabilities of software development, non-profits can create engaging and interactive games or applications that not only entertain but also educate and inspire supporters.
+</p>
+<p>
+Programming enables non-profits to efficiently manage donor databases, automate donation tracking, and personalize donor engagement strategies. By leveraging technology, non-profits can reach a broader audience, extending their impact and ensuring a sustainable flow of funds for their noble causes. In this digital age, the fusion of programming, open source, and non-profit work opens up exciting possibilities for creativity and resource mobilization.
+</p>
+<p>
 The Digital Education & Safety Foundation developed a fork of the Scratch 3.0 Visual Programming platform which includes software extensions for generating NFTs for their fundraising program. The fork is hosted by the foundation and is available free for use <a href="https://scratch.digitaleducationsafety.org">here</a>.
+</p>
+<p>
+See some of our examples below!
+</p>
+</div>
 
-See some examples below!
+
+<div class="col-md-4 mb-3">
+  <div class="card">
+    <img class="img-fluid" src="/assets/img/opensource/mast.jpg" alt="">
+      <div class="card-body">
+          <h5 class="card-title">Open Source</h5>
+          <p class="card-text">See trending Open Source Projects in the tech industry.</p>
+          <a href="/open-source" target="_blank" class="btn btn-primary stretched-link">View</a>
+      </div>
+  </div>
+</div>
+</div>
+
+
+
+
+
 <div class="row">
   <div class="col-md-6 col-sm-6">
 
