--- a/_programs/1.md
+++ b/_programs/1.md
@@ -43,7 +43,7 @@ See some of our examples below!
       <div class="card-body">
           <h5 class="card-title">Open Source</h5>
           <p class="card-text">See trending Open Source Projects in the tech industry.</p>
-          <a href="/open-source" target="_blank" class="btn btn-primary stretched-link">View</a>
+          <a href="/open-source" target="_blank" class="btn btn-primary stretched-link">Explore</a>
       </div>
   </div>
 </div>
