--- a/_programs/1.md
+++ b/_programs/1.md
@@ -12,13 +12,7 @@ caption:
   thumbnail: /assets/img/portfolio/01-thumbnail.jpg
 ---
 
-
-## Programming: Code your digital STEM vision
-
-
-
-
-
+## Code your digital STEM vision
 
 <div class="row">
 <div class="col-md-8 mb-3">
