--- a/_programs/2.md
+++ b/_programs/2.md
@@ -11,7 +11,7 @@ caption:
   thumbnail: /assets/img/portfolio/02-thumbnail.jpg
 ---
 
-## Web 3: Fundraising in the digital age
+## Fundraising in the digital age
 
 <div class="row">
 <div class="col-md-8 mb-3">
@@ -37,7 +37,7 @@ By leveraging algorithms and programming used in NFT creation, learners not only
       <div class="card-body">
           <h5 class="card-title">Web 3 Glossary</h5>
           <p class="card-text">See trending Web 3 definitions using our curated Glossaries.</p>
-          <a href="/glossaries" target="_blank" class="btn btn-primary stretched-link">Explore</a>
+          <a href="/glossaries" target="_blank" class="btn btn-primary stretched-link">View</a>
       </div>
   </div>
 </div>
