--- a/_programs/3.md
+++ b/_programs/3.md
@@ -12,7 +12,7 @@ caption:
   thumbnail: /assets/img/portfolio/03-thumbnail.jpg
 ---
 
-## Community Gaming: Minecraft
+## Game online with the community
 
 Engaging with a non-profit Minecraft server to explore STEM (Science, Technology, Engineering, and Mathematics) topics is a captivating and educational experience. This innovative approach to learning combines the creative and collaborative nature of Minecraft with the principles of STEM education. Within this virtual world, participants can build complex structures, experiment with redstone circuitry, and even simulate scientific phenomena, all while learning valuable concepts in a fun and immersive way.
 
