--- a/_programs/4.md
+++ b/_programs/4.md
@@ -12,7 +12,7 @@ caption:
   thumbnail: /assets/img/portfolio/04-thumbnail.jpg
 ---
 
-## Social Media
+## Social media with a cause
 
 Leveraging the power of social media to raise awareness for philanthropy in STEM education is a dynamic and influential strategy. Platforms like Facebook, Twitter, Instagram, and TikTok offer non-profit organizations an extensive reach to connect with a global audience passionate about science, technology, engineering, and mathematics. Through compelling content, live streams, webinars, and engaging challenges, these organizations can showcase their initiatives, share success stories, and highlight the impact of STEM education in underprivileged communities.
 
