--- a/_opensource/10.md
+++ b/_opensource/10.md
@@ -1,6 +1,6 @@
 ---
 title: FoundationDB
-homepage: https://www.foundationdb.org/
+contribute: https://github.com/apple/foundationdb/blob/main/CONTRIBUTING.md
 image: https://avatars.githubusercontent.com/u/2393912?s=280&v=4
 tags: [Apple]
 
