--- a/_opensource/16.md
+++ b/_opensource/16.md
@@ -1,6 +1,6 @@
 ---
 title: Snap.svg
-homepage: https://blog.twitter.com/engineering/en_us/topics/open-source/2023/twitter-recommendation-algorithm
+contribute: http://snapsvg.io/start/
 image: https://opensource.adobe.com/img/snapsvg.svg
 tags: [Adobe]
 
