--- a/_opensource/18.md
+++ b/_opensource/18.md
@@ -1,6 +1,6 @@
 ---
 title: Caikit
-homepage: https://caikit.github.io/website/
+contribute: https://github.com/caikit/community/blob/main/CONTRIBUTING.md
 image: https://dw1.s81c.com/developer-static-pages/open/en/open-projects/images/caikit.png1200px-Source_Code_Pro_-_sample.svg.png
 tags: [IBM]
 
