--- a/_opensource/2.md
+++ b/_opensource/2.md
@@ -1,6 +1,6 @@
 ---
 title: PyTorch
-homepage: https://pytorch.org/
+contribute: https://pytorch.org/get-started/locally/
 image: https://opensource.fb.com/img/projects/pytorch-dark-background.png
 tags: [Meta]
 
