--- a/_opensource/25.md
+++ b/_opensource/25.md
@@ -1,6 +1,6 @@
 ---
 title: Celadon
-homepage: https://www.intel.com/content/www/us/en/developer/topic-technology/open/celadon/overview.html
+contribute: https://www.intel.com/content/www/us/en/developer/topic-technology/open/celadon/community.html
 image: https://www.intel.com/content/dam/www/central-libraries/us/en/images/2022-09/celadon-logo-transparent-rwd.png
 tags: [Intel]
 
