--- a/_opensource/26.md
+++ b/_opensource/26.md
@@ -1,6 +1,6 @@
 ---
 title: Omnitrace
-homepage: https://www.mysql.com/
+contribute: https://dev.mysql.com/blog-archive/contributing-to-mysql-server/
 tags: [AMD]
 image: https://avatars.githubusercontent.com/u/73367412?s=280&v=4
 
