--- a/_opensource/9.md
+++ b/_opensource/9.md
@@ -1,6 +1,6 @@
 ---
 title: TensorFlow
-homepage: https://tensorflow.org/
+contribute: https://www.tensorflow.org/community/contribute
 image: https://opensource.google/static/images/projects/os-projects-tensorflow.svg
 tags: [Alphabet]
 
