--- a/_opensource/15.md
+++ b/_opensource/15.md
@@ -1,6 +1,6 @@
 ---
 title: the-algorithm
-homepage: https://blog.twitter.com/engineering/en_us/topics/open-source/2023/twitter-recommendation-algorithm
+contribute: https://github.com/twitter/the-algorithm?tab=readme-ov-file#contributing
 image: https://pbs.twimg.com/profile_images/1683899100922511378/5lY42eHs_200x200.jpg
 tags: [X]
 
