--- a/_opensource/17.md
+++ b/_opensource/17.md
@@ -1,6 +1,6 @@
 ---
 title: Source Code Pro
-homepage: https://blog.twitter.com/engineering/en_us/topics/open-source/2023/twitter-recommendation-algorithm
+contribute: https://github.com/adobe-fonts/source-code-pro?tab=readme-ov-file#getting-involved
 image: https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Source_Code_Pro_-_sample.svg/1200px-Source_Code_Pro_-_sample.svg.png
 tags: [Adobe]
 
