--- a/_opensource/20.md
+++ b/_opensource/20.md
@@ -1,6 +1,6 @@
 ---
 title: Graal
-homepage: https://www.graalvm.org/
+contribute: https://www.graalvm.org/community/contributors/
 image: https://upload.wikimedia.org/wikipedia/commons/thumb/f/f1/GraalVM_Logo_RGB.svg/1200px-GraalVM_Logo_RGB.svg.png
 tags: [Oracle]
 
