--- a/_opensource/27.md
+++ b/_opensource/27.md
@@ -1,6 +1,6 @@
 ---
 title: Llama 2
-homepage: https://ai.meta.com/llama/
+contribute: https://github.com/facebookresearch/llama/blob/main/CONTRIBUTING.md
 tags: [Meta]
 image: https://scontent-sjc3-1.xx.fbcdn.net/v/t39.2365-6/382845101_319009987476355_3736690826998235085_n.png?_nc_cat=111&ccb=1-7&_nc_sid=e280be&_nc_ohc=CKvnYMvoJHIAX_njBmV&_nc_ht=scontent-sjc3-1.xx&oh=00_AfAx0y1dIMZ2G_G9Q1PM-d8vZUfueDJ-0T-zaYPw3uq5-g&oe=65BD07E7
 
