--- a/_opensource/8.md
+++ b/_opensource/8.md
@@ -1,6 +1,6 @@
 ---
 title: Chromium
-homepage: https://www.chromium.org/
+contribute: https://chromium.googlesource.com/chromium/src/+/main/docs/contributing.md
 image: https://opensource.google/static/images/projects/os-projects-chromium.svg
 tags: [Alphabet]
 
