--- a/_programs/2.md
+++ b/_programs/2.md
@@ -4,6 +4,7 @@ id: 2
 title: brag.charity
 subtitle: Projects
 image: /assets/img/portfolio/02-full.jpg
+description: "Embracing Web 3, cryptocurrency, and NFTs (Non-Fungible Tokens) for non-profit fundraising represents an innovative and potentially transformative strategy."
 
 caption:
   title: Web 3
