--- a/_programs/1.md
+++ b/_programs/1.md
@@ -4,6 +4,7 @@ id: 1
 title: Programming
 subtitle: Projects
 image: /assets/img/portfolio/01-full.jpg
+description: "By harnessing the capabilities of software development, non-profits can create engaging and interactive games or applications that not only entertain but also educate and inspire supporters."
 alt: 
 
 caption:
