--- a/_programs/4.md
+++ b/_programs/4.md
@@ -4,6 +4,7 @@ id: 4
 title: Social Media
 subtitle: Projects
 image: /assets/img/portfolio/04-full.jpg
+description: "Leveraging the power of social media to raise awareness for philanthropy in STEM education is a dynamic and influential strategy."
 alt: 
 
 caption:
