--- a/_opensource/27.md
+++ b/_opensource/27.md
@@ -2,10 +2,10 @@
 title: Llama 2
 contribute: https://github.com/facebookresearch/llama/blob/main/CONTRIBUTING.md
 tags: [Meta]
-image: https://scontent-sjc3-1.xx.fbcdn.net/v/t39.2365-6/382845101_319009987476355_3736690826998235085_n.png?_nc_cat=111&ccb=1-7&_nc_sid=e280be&_nc_ohc=CKvnYMvoJHIAX_njBmV&_nc_ht=scontent-sjc3-1.xx&oh=00_AfAx0y1dIMZ2G_G9Q1PM-d8vZUfueDJ-0T-zaYPw3uq5-g&oe=65BD07E7
+image: https://about.fb.com/wp-content/uploads/2023/07/Next-generation-of-Llama-2-AI_header.jpg?fit=1920%2C1080
 
 caption:
-  thumbnail: https://scontent-sjc3-1.xx.fbcdn.net/v/t39.2365-6/382845101_319009987476355_3736690826998235085_n.png?_nc_cat=111&ccb=1-7&_nc_sid=e280be&_nc_ohc=CKvnYMvoJHIAX_njBmV&_nc_ht=scontent-sjc3-1.xx&oh=00_AfAx0y1dIMZ2G_G9Q1PM-d8vZUfueDJ-0T-zaYPw3uq5-g&oe=65BD07E7
+  thumbnail: https://about.fb.com/wp-content/uploads/2023/07/Next-generation-of-Llama-2-AI_header.jpg?fit=1920%2C1080
 ---
 
 Llama 2 is a family of generative text models that are optimized for assistant-like chat use cases or can be adapted for a variety of natural language generation tasks.
