--- a/_resources/12.md
+++ b/_resources/12.md
@@ -1,6 +1,6 @@
 ---
 id: 12
-title: LEGO Education in Collaboration with NASA Introduce - Build to Launch: A STEAM Exploration Series
+title: "LEGO Education in Collaboration with NASA Introduce - Build to Launch: A STEAM Exploration Series"
 subtitle: In collaboration with NASA, we are proud to introduce a free digital STEAM learning series, based on educational standards, that will spark student curiosity and increase engagement for the upcoming launch of the Artemis I Mission!
 image: https://i.ytimg.com/vi/Pzr_ShqcBGM/hqdefault.jpg
 link: https://youtube.com/playlist?list=PLXNn7QnqlNpi_yEaivsfoYN_7LUxG3sqm&feature=shared
@@ -12,3 +12,4 @@ caption:
 tags: [all]
 categories: videos
 ---
+
