--- a/_programs/3.md
+++ b/_programs/3.md
@@ -15,31 +15,46 @@ caption:
 
 ## Game online with the community
 
+We offer a no-cost moderated Minecraft server to our community members! 
+
 Engaging with a non-profit Minecraft server to explore STEM learning combines the creative and collaborative nature of Minecraft with the principles of STEM education. Within this virtual world, participants can build complex structures, experiment with redstone circuitry, and even simulate scientific phenomena, all while learning valuable concepts in a fun and immersive way.
 
-These servers often offer curated educational content and challenges that encourage critical thinking, problem-solving, and teamwork, fostering a sense of community among players who share a passion for STEM. Ultimately, playing on a non-profit Minecraft server dedicated to STEM topics not only makes learning enjoyable but also empowers individuals with the skills and knowledge needed for future careers in science and technology.
-
-The Foundation offers a no-cost moderated Minecraft server to our community members! Please contact us for more information.
-
-
-<div id="twitch-embed"></div>
-<script src="https://embed.twitch.tv/embed/v1.js"></script>
-
-<!-- Create a Twitch.Embed object that will render within the "twitch-embed" element. -->
-<script type="text/javascript">
-  var embed = new Twitch.Embed("twitch-embed", {
-    width: "100%",
-    height: 480,
-    channel: "digitaledsafety",
-    layout: "video",
-    autoplay: false,
-    // Only needed if this page is going to be embedded on other websites
-    parent: ["psychic-space-sniffle-pw6vr96jqqj246v-4000.app.github.dev", "digitaleducationsafety.org"]
-  });
-
-  embed.addEventListener(Twitch.Embed.VIDEO_READY, () => {
-    var player = embed.getPlayer();
-    player.play();
-  });
-</script>
+<div class="container">
+<div class="row">
+  <div class="col-lg-12">
+    <form id="contactForm"
+      action="https://formspree.io/{% if site.formspree_form_path_mc %}{{ site.formspree_form_path_mc }}{% else %}{{ site.email }}{% endif %}"
+      novalidate="novalidate" method="POST">
+      <!--name="sentMessage"-->
+      <div class="row"><div class="col-lg-6 offset-3"><h5>Please fill out the form below to request the server information.</h5></div></div>
+      <div class="row">
+        <div class="col-lg-6 offset-3">
+          <div class="form-group">
+            <input name="name" class="form-control" id="name" type="text"
+              placeholder="{{ site.data.sitetext.contact.name | default: "Name*" }}"
+              required="required" data-validation-required-message="{{ site.data.sitetext.contact.name-validation | default: "Please enter your name." }}">
+            <p class="help-block text-danger"></p>
+          </div>
+          <div class="form-group">
+            <input name="_replyto" class="form-control" id="email" type="email"
+              placeholder="{{ site.data.sitetext.contact.email | default: "Email*" }}"
+              required="required" data-validation-required-message="{{ site.data.sitetext.contact.email-validation | default: "Please enter your email address." }}">
+            <p class="help-block text-danger"></p>
+          </div>
+        </div>
+        <input type="hidden" name="_subject" id="email-subject"
+          value="{{ site.data.sitetext.contact.subject | default: "Contact Form Submission" }}">
+        <div class="clearfix"></div>
+        <div class="col-lg-12 text-center">
+          <div id="success"></div>
+          <button id="sendMessageButton" class="btn btn-primary btn-med text-uppercase"
+            type="submit">{{ site.data.sitetext.contact.submit | default: "Submit" }}</button>
+        </div>
+        <input type="text" name="_gotcha" style="display:none">
+        <input type="hidden" name="_next" value="#" />
+      </div>
+    </form>
+  </div>
+</div>
+</div>
 
