Better centering of elements.

--- a/_programs/3.md
+++ b/_programs/3.md
@@ -26,9 +26,9 @@ Engaging with a non-profit Minecraft server to explore STEM learning combines th
       action="https://formspree.io/{% if site.formspree_form_path_mc %}{{ site.formspree_form_path_mc }}{% else %}{{ site.email }}{% endif %}"
       novalidate="novalidate" method="POST">
       <!--name="sentMessage"-->
-      <div class="row"><div class="col-lg-6 offset-3"><h5>Please fill out the form below to request the server information.</h5></div></div>
-      <div class="row">
-        <div class="col-lg-6 offset-3">
+      <div class="row justify-content-center"><div class="col-lg-6"><h5>Please fill out the form below to request the server information.</h5></div></div>
+      <div class="row justify-content-center">
+        <div class="col-lg-6 ">
           <div class="form-group">
             <input name="name" class="form-control" id="name" type="text"
               placeholder="{{ site.data.sitetext.contact.name | default: "Name*" }}"
